tests/paczka1/small_fuzzy/36399839.err
Error in line 3: gQosC S443 92,8
Error in line 10: iGu7 S291 56,4
